I got it to start, now I gotta just do it

--- a/reports/report.html
+++ b/reports/report.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="author" content="Skippy McBoatface">
+<meta name="author" content="Quinn Rentz">
 <meta name="dcterms.date" content="2025-04-13">
 
 <title>Homework 8 - World Bank Analysis</title>
